<resources>
    <string name="app_name">TabataTimer</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Следующий</string>
    <string name="previous">Предыдущий</string>
    <string name="create_fragment_toolbar_title">Создайте таймер</string>
    <string name="edit_fragment_toolbar_title">Обновите таймер</string>
    <string name="timer_sequence_fragment_toolbar_title">Тренировки</string>
    <string name="dialogInputTextView">Введите название</string>
    <string name="dialogInputEditText">Введите текст здесь..</string>
    <string name="settings_fragment_toolbar_title">Настройки</string>
    <string name="theme_header">Тема</string>
    <string name="clearData">clrData</string>
    <string name="data_header">Данные</string>
    <string name="_0">0</string>
    <string name="work_out_text_view">Работа</string>
    <string name="_10">10</string>
    <string name="_20">20</string>
    <string name="cooldown_text_view">Успокоиться</string>
    <string name="rest_text_view">Отдых</string>
    <string name="warm_up_text_view">Подготовка</string>
    <string name="cycle_text_view">Циклы</string>
    <string name="_8">8</string>
    <string name="repeat_text_view">Повторения</string>
    <string name="_1">1</string>
    <string name="complete">Финиш</string>
    <string name="edit_label">Редактировать</string>
    <string name="delete_label">Удалить</string>
    <string name="read_label">Читать</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="themePrefTitle">Тёмная тема</string>
    <string name="langPrefTitle">Язык</string>
    <string name="edit_symbol">⋮</string>
    <string name="lang_pref_summury">Выбор языка</string>
    <string name="clear_pref_summury">Очистить все данные</string>
    <string name="clear_pref">Очистить данные</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_ok">Ок</string>
    <string name="newTimer">Новый таймер</string>
    <string name="qsn_delete">Удалить?</string>
    <string name="delete_message">Вы уверены, что хотите удалить тренировку?</string>
    <string name="deleteItem">Удалить</string>
    <string name="repeats_read">\"Количество повторений - \"</string>
    <string name="cycles_read">\"\nКоличество циклов - \"</string>
    <string name="warmup_read">\"\nВремя подготовки - \"</string>
    <string name="workout_read">\nВремя подхода работы -</string>
    <string name="rest_read">\"\nВремя подхода отдыха - \"</string>
    <string name="cooldown_read">\"\nВремя отдыха между сетами - \"</string>
    <string name="all_time_read">\"\nОбщее время работы - \"</string>
    <string name="small">Мелкий</string>
    <string name="medium">Средний</string>
    <string name="large">Крупный</string>
    <string name="font_size_dialog_title">Размер шрифта</string>
    <string name="font_pref_summury">Выберите размер шрифта</string>
    <string name="back">Назад</string>
</resources>