<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--    <include layout="@layout/toolbar_settings_fragment" />-->

    <PreferenceCategory app:title="@string/theme_header">

        <SwitchPreferenceCompat
            android:key="theme"
            app:title="@string/themePrefTitle"
            app:defaultValue="false"/>

        <ListPreference
            android:key="lang"
            android:entries="@array/langNames"
            android:entryValues="@array/langValues"
            android:summary="@string/lang_pref_summury"
            android:title="@string/langPrefTitle"
            app:defaultValue="ru"/>

        <ListPreference
            android:key="fontSize"
            android:entries="@array/fontSizeNames"
            android:entryValues="@array/fontSizeValues"
            android:title="@string/font_size_dialog_title"
            app:dialogTitle="@string/font_size_dialog_title"
            android:summary="@string/font_pref_summury"
            app:defaultValue="2"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data_header">
        <Preference
            android:key="clear"
            app:summary="@string/clear_pref_summury"
            app:title="@string/clear_pref" />
    </PreferenceCategory>

</PreferenceScreen>